notification-engine/main/default/objects/NotificationGroup__c/NotificationGroup__c.object-meta.xml
<CustomObject>
    <description>A notification group which stores a single message to be sent to users. This can be a login message/welcome message etc or some other generic message.</description>
    <label>Notification Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>