notification-engine/main/default/objects/NotificationGroup__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>Write the body of the notification. This field support merge fields for user object. Example: {!User.Field__c} messages with values larger than 750 characters will be truncated.</inlineHelpText>
    <label>Body</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>