notification-engine/main/default/objects/NotificationGroup__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Write the title of the notification. This field does not support merge fields. Messages with values larger than 250 characters will be truncated.</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>